IVYPORTAL-11209: Upgrade prototyped Task Widget to official New Task Widget II - Handled feedback: Clean code - Handled feedback: Fix scrollbar and height of task info, task filter panel - Fixed UI after change from ui:repeat to c:foreach

--- a/AxonIvyPortal/PortalTemplate/webContent/resources/css/dashboard.css
+++ b/AxonIvyPortal/PortalTemplate/webContent/resources/css/dashboard.css
@@ -120,11 +120,6 @@
   margin-bottom: 10px;
 }
 
-.dashboard-tasks__start, .dashboard-tasks__priority, .dashboard-tasks__id, 
-.dashboard-tasks__state, .dashboard-tasks__created-date, .dashboard-tasks__expiry-date {
-  text-align: center !important;
-}
-
 .dashboard-tasks__start .fa {
   text-align: center;
   display: block;
@@ -209,6 +204,10 @@ body .ui-selectcheckboxmenu.task-configuration__selectcheckboxmenu .ui-selectche
   top: 5px;
 }
 
+.task-configuration__selectcheckboxmenu-panel {
+  width: 300px;
+}
+
 .task-configuration__calendar {
   float: right;
   width: 90%;
@@ -219,13 +218,13 @@ body .ui-selectcheckboxmenu.task-configuration__selectcheckboxmenu .ui-selectche
   width: 100%;
 }
 
-.task-configuration__calendar .ui-datepicker-trigger {
-  top: -23px !important;
-  right: -92% !important;
+body .ui-calendar.task-configuration__calendar .ui-datepicker-trigger {
+  top: -23px;
+  right: -92%;
 }
 
-.task-configuration__calendar .ui-button-text {
-  line-height: normal !important;
+.task-configuration__calendar .ui-datepicker-trigger.ui-button-icon-only .ui-button-text {
+  line-height: normal;
 }
 
 .task-configuration__column-picker.ui-picklist .ui-picklist-list {
@@ -236,16 +235,11 @@ body .ui-selectcheckboxmenu.task-configuration__selectcheckboxmenu .ui-selectche
   width: calc(100% - 470px);
   align-items: flex-start;
   align-self: stretch;
-  padding: 10px !important;
+  padding: 10px;
 }
 
 .task-preview__header {
   margin: 0;
-}
-
-.task-configuration__select-one-menu {
-  float: right;
-  width: 90% !important;
 }
 
 .task-configuration__user-selection>span {
@@ -292,7 +286,7 @@ body .ui-selectcheckboxmenu.task-configuration__selectcheckboxmenu .ui-selectche
 }
 
 .ui-widget-content.info-overlay-panel {
-  max-height: 80vh;
+  max-height: 60vh;
   overflow: auto;
   padding: 0;
 }
@@ -308,4 +302,28 @@ body .ui-selectcheckboxmenu.task-configuration__selectcheckboxmenu .ui-selectche
 
 body .ui-widget-content .dashboard-widget-icon {
   font-size: 2rem !important;
+}
+
+.category-filter-tree {
+  max-height: 400px;
+  overflow-y: auto;
+}
+
+.category-panel {
+  position: relative;
+}
+
+.category-panel .category-filter-info {
+  display: block;
+}
+
+.category-panel .category-filter-info.minimize-content {
+  height: 160px;
+  overflow: hidden;
+}
+
+.category-panel .category-toggle {
+  position: absolute;
+  top: 15px;
+  right: -13px;
 }
